# housing-forecast-poc

./: .gitignore  README.md  app.py  main.py  pyproject.toml
forecaster/: .env.sample  .gitignore  create-deployment.ipynb  forecast.py  main.py  pyproject.toml  requirements.txt
forecaster/utils/: district.json  utils.py
utils/: prompts.py
