[project]
name = "forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.2",
    "bedrock-agentcore-starter-toolkit>=0.1.7",
    "boto3>=1.40.21",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "mcp[cli]>=1.13.1",
]
